--- a/apps/cli/man/infi.1
+++ b/apps/cli/man/infi.1
@@ -13,6 +13,10 @@ infi \- control Infinitune daemon playback from the terminal
 .RI [ --server " URL" ]
 .br
 .B infi
+.B thumb
+.RI [ up|down ]
+.br
+.B infi
 .B config
 .RI [ --interactive ]
 .RI [ --mode " room|local" ]
@@ -58,6 +62,10 @@ Pause playback.
 .TP
 .B skip
 Skip to the next song.
+.TP
+.B thumb up|down
+Rate the currently playing song with thumbs up/down.
+Sending the same rating again toggles it off.
 .TP
 .B volume up|down
 Adjust volume by configured step (or
