feature/leave clear commands (#25)
* fix(cli): pause local audio immediately for room stop/play commands

* feat(cli): add leave and clear session commands

* fix(cli): keep volume local when room device is individual

* feat(cli): add thumbs up/down song rating command

* fix(cli): set audio client name for pipewire/pulse

* feat(cli-room): harden daemon room protocol and add doctor diagnostics

* fix(room): improve join fallback, room UX, position sync, and volume stability

* fix(audio): reduce duplicate reloads and stabilize pulse stream identity

* fix: address code review findings

* fix: resolve remaining review conversations

* fix: address greptile review feedback

* fix: address greptile review feedback

--- a/apps/cli/man/infi.1
+++ b/apps/cli/man/infi.1
@@ -13,6 +13,10 @@ infi \- control Infinitune daemon playback from the terminal
 .RI [ --server " URL" ]
 .br
 .B infi
+.B thumb
+.RI [ up|down ]
+.br
+.B infi
 .B config
 .RI [ --interactive ]
 .RI [ --mode " room|local" ]
@@ -21,6 +25,13 @@ infi \- control Infinitune daemon playback from the terminal
 .RI [ --volume-step " 0..1" ]
 .RI [ --daemon-host " HOST" ]
 .RI [ --daemon-port " 1..65535" ]
+.br
+.B infi
+.B clear
+.br
+.B infi
+.B doctor
+.B room
 .SH DESCRIPTION
 .B infi
 controls a background daemon that owns local audio playback.
@@ -56,6 +67,10 @@ Pause playback.
 .B skip
 Skip to the next song.
 .TP
+.B thumb up|down
+Rate the currently playing song with thumbs up/down.
+Sending the same rating again toggles it off.
+.TP
 .B volume up|down
 Adjust volume by configured step (or
 .B --step
@@ -74,8 +89,18 @@ Join an existing room by ID.
 .B room pick
 Interactive room picker.
 .TP
+.B room leave
+Leave the active room session and stop local room playback.
+.TP
+.B playlist leave
+Leave the active local playlist session and stop local playback.
+.TP
 .B status
 Show daemon status summary.
+For room mode, includes connection diagnostics (state, join ack, protocol version, reconnect/disconnect info).
+.TP
+.B doctor room
+Run focused room diagnostics (daemon mode/server/session checks plus room and now-playing API checks).
 .TP
 .B daemon start|stop|status|restart
 Manage daemon process lifecycle.
@@ -96,6 +121,13 @@ for guided setup.
 .TP
 .B setup
 Alias for guided config-oriented setup.
+.TP
+.B clear
+Clear non-general config fields (
+.BR playbackMode ,
+.BR defaultRoomId ,
+.BR defaultPlaylistKey )
+and clear the active daemon session if running.
 .TP
 .B service install|uninstall|restart
 Manage a user-level systemd service for the daemon.
